--- a/css/site.css
+++ b/css/site.css
@@ -36,8 +36,11 @@ header nav li {
 .container{
 	margin:10px;
 	padding:5px;
-	border:2px solid black;
+	border:2px;
+	border-style:solid;
+	border-color:black;
 	border-radius:3px;
+	text-align:center;
 }
 p{
 	font-weight:bold;
